--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -6,9 +6,9 @@ name: Test CI
 on:
   # Triggers the workflow on push or pull request events but only for the main branch
   push:
-    branches: [ main ]
+    branches: 'master'
   pull_request:
-    branches: '*'
+    branches: 'master'
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
