--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -5,10 +5,10 @@ name: CI
 # Controls when the workflow will run
 on:
   # Triggers the workflow on push or pull request events but only for the main branch
-  push:
-    branches: [ main ]
+  #push:
+  #  branches: [ main ]
   pull_request:
-    types: [closed]
+    types: [main]
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
@@ -34,3 +34,7 @@ jobs:
         run: |
           echo Add other actions to build,
           echo test, and deploy your project.
+          
+      - name: Build image
+        # Собираем image и называем его так как указано в hub.docker т.е. login/repository:version
+        run: docker build -t test/test:latest -f Dockerfile .
